--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\incl\HelloWorldApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\incl\PixmapTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\gdx-helloworld.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\HelloWorldApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\PixmapTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
