added lodePNG library. very basic Pixmap test run

--- a/gdx/proj/gdx.vcxproj.filters
+++ b/gdx/proj/gdx.vcxproj.filters
@@ -111,6 +111,15 @@
     <ClCompile Include="..\src\stb_image.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\lodepng.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\PixmapIO.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\FileHandle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\incl\stdafx.h">
@@ -244,6 +253,12 @@
     </ClInclude>
     <ClInclude Include="..\exp\TextureData.h">
       <Filter>Exported Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\exp\PixmapIO.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\incl\lodepng.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
