--- a/gdx/proj/gdx.vcxproj
+++ b/gdx/proj/gdx.vcxproj
@@ -84,6 +84,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\src\FileHandle.cpp" />
     <ClCompile Include="..\src\FileTextureData.cpp" />
     <ClCompile Include="..\src\Gdx.cpp" />
     <ClCompile Include="..\src\gdx2d.c">
@@ -93,12 +94,16 @@
     <ClCompile Include="..\src\Gdx2DPixmap.cpp" />
     <ClCompile Include="..\src\GdxRuntimeException.cpp" />
     <ClCompile Include="..\src\IndexBufferObject.cpp" />
+    <ClCompile Include="..\src\lodepng.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="..\src\MathUtils.cpp" />
     <ClCompile Include="..\src\Matrix3.cpp" />
     <ClCompile Include="..\src\Matrix4.cpp" />
     <ClCompile Include="..\src\Mesh.cpp" />
     <ClCompile Include="..\src\NumberUtils.cpp" />
     <ClCompile Include="..\src\Pixmap.cpp" />
+    <ClCompile Include="..\src\PixmapIO.cpp" />
     <ClCompile Include="..\src\PixmapTextureData.cpp" />
     <ClCompile Include="..\src\Quaternion.cpp" />
     <ClCompile Include="..\src\ShaderProgram.cpp" />
@@ -147,6 +152,7 @@
     <ClInclude Include="..\exp\Mesh.h" />
     <ClInclude Include="..\exp\NumberUtils.h" />
     <ClInclude Include="..\exp\Pixmap.h" />
+    <ClInclude Include="..\exp\PixmapIO.h" />
     <ClInclude Include="..\exp\PixmapTextureData.h" />
     <ClInclude Include="..\exp\Quaternion.h" />
     <ClInclude Include="..\exp\ShaderProgram.h" />
@@ -161,6 +167,7 @@
     <ClInclude Include="..\exp\VertexData.h" />
     <ClInclude Include="..\incl\etc1_utils.h" />
     <ClInclude Include="..\incl\gdx2d.h" />
+    <ClInclude Include="..\incl\lodepng.h" />
     <ClInclude Include="..\incl\stdafx.h" />
     <ClInclude Include="..\incl\targetver.h" />
   </ItemGroup>
