--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\incl\PixmapTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\incl\MatrixTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\gdx-helloworld.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\PixmapTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\MatrixTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
