--- a/gdx/proj/gdx.vcxproj.filters
+++ b/gdx/proj/gdx.vcxproj.filters
@@ -120,6 +120,12 @@
     <ClCompile Include="..\src\FileHandle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\FileHandleStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Files.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\incl\stdafx.h">
@@ -259,6 +265,9 @@
     </ClInclude>
     <ClInclude Include="..\incl\lodepng.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\FileHandleStream.h">
+      <Filter>Exported Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
