--- a/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj.filters
+++ b/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="..\exp\WoglGL20.h">
       <Filter>Exported Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\%40Git\backends\gdx-backend-wogl\exp\WoglFileHandleStream.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp">
@@ -127,6 +130,9 @@
     </ClCompile>
     <ClCompile Include="..\extern\glew.c">
       <Filter>extern</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\%40Git\backends\gdx-backend-wogl\src\WoglFileHandleStream.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
