--- a/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj.filters
+++ b/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj.filters
@@ -72,8 +72,8 @@
     <ClInclude Include="..\exp\WoglGL20.h">
       <Filter>Exported Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\%40Git\backends\gdx-backend-wogl\exp\WoglFileHandleStream.h">
-      <Filter>Exported Header Files</Filter>
+    <ClInclude Include="..\exp\WoglFileHandleStream.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -131,7 +131,7 @@
     <ClCompile Include="..\extern\glew.c">
       <Filter>extern</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\%40Git\backends\gdx-backend-wogl\src\WoglFileHandleStream.cpp">
+    <ClCompile Include="..\src\WoglFileHandleStream.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
