Circle, Plane, Rectangle

--- a/gdx/proj/gdx.vcxproj.filters
+++ b/gdx/proj/gdx.vcxproj.filters
@@ -126,6 +126,18 @@
     <ClCompile Include="..\..\..\%40Git\gdx\src\Files.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Circle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Plane.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Polygon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Rectangle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\incl\stdafx.h">
@@ -267,6 +279,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\%40Git\gdx\exp\FileHandleStream.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Circle.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Plane.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Polygon.h">
+      <Filter>Exported Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Rectangle.h">
       <Filter>Exported Header Files</Filter>
     </ClInclude>
   </ItemGroup>
