--- a/gdx/proj/gdx.vcxproj
+++ b/gdx/proj/gdx.vcxproj
@@ -74,8 +74,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Circle.cpp" />
     <ClCompile Include="..\..\..\%40Git\gdx\src\FileHandleStream.cpp" />
     <ClCompile Include="..\..\..\%40Git\gdx\src\Files.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Plane.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Polygon.cpp" />
+    <ClCompile Include="..\..\..\%40Git\gdx\src\Rectangle.cpp" />
     <ClCompile Include="..\src\BoundingBox.cpp" />
     <ClCompile Include="..\src\Color.cpp" />
     <ClCompile Include="..\src\dllmain.cpp" />
@@ -126,7 +130,11 @@
     <ClCompile Include="..\src\VertexBufferObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Circle.h" />
     <ClInclude Include="..\..\..\%40Git\gdx\exp\FileHandleStream.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Plane.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Polygon.h" />
+    <ClInclude Include="..\..\..\%40Git\gdx\exp\Rectangle.h" />
     <ClInclude Include="..\exp\Application.h" />
     <ClInclude Include="..\exp\ApplicationListener.h" />
     <ClInclude Include="..\exp\BoundingBox.h" />
