--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="..\incl\gdx-helloworld.h" />
     <ClInclude Include="..\incl\HelloWorldApp.h" />
     <ClInclude Include="..\incl\MatrixTest.h" />
+    <ClInclude Include="..\incl\MeshShaderTest.h" />
     <ClInclude Include="..\incl\PixmapTest.h" />
     <ClInclude Include="..\incl\stdafx.h" />
     <ClInclude Include="..\incl\targetver.h" />
@@ -90,6 +91,7 @@
     <ClCompile Include="..\src\gdx-helloworld.cpp" />
     <ClCompile Include="..\src\HelloWorldApp.cpp" />
     <ClCompile Include="..\src\MatrixTest.cpp" />
+    <ClCompile Include="..\src\MeshShaderTest.cpp" />
     <ClCompile Include="..\src\PixmapTest.cpp" />
     <ClCompile Include="..\src\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
