--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\%40Git\demos\helloworld\gdx-helloworld\incl\SpriteBatchTest.h" />
     <ClInclude Include="..\incl\gdx-helloworld.h" />
     <ClInclude Include="..\incl\HelloWorldApp.h" />
     <ClInclude Include="..\incl\MatrixTest.h" />
@@ -87,6 +88,7 @@
     <ClInclude Include="..\incl\VertexBufferObjectShaderTest.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\%40Git\demos\helloworld\gdx-helloworld\src\SpriteBatchTest.cpp" />
     <ClCompile Include="..\src\gdx-helloworld.cpp" />
     <ClCompile Include="..\src\HelloWorldApp.cpp" />
     <ClCompile Include="..\src\MatrixTest.cpp" />
