--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\incl\VertexBufferObjectShaderTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\%40Git\demos\helloworld\gdx-helloworld\incl\SpriteBatchTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\gdx-helloworld.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\VertexBufferObjectShaderTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\%40Git\demos\helloworld\gdx-helloworld\src\SpriteBatchTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
