--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
@@ -36,6 +36,7 @@
     <ClInclude Include="..\incl\VertexBufferObjectShaderTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\incl\SpriteBatchTest.h">
     <ClInclude Include="..\incl\MeshShaderTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -59,6 +60,7 @@
     <ClCompile Include="..\src\VertexBufferObjectShaderTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\SpriteBatchTest.cpp">
     <ClCompile Include="..\src\MeshShaderTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
